# RAJA

./: .buildinfo  .clang-format  .codecov.yaml  .codecov.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .pullapprove.yml  .readthedocs.yml  .travis.yml  .uberenv_config.json  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  LICENSE  LICENSE.txt  NOTICE  RAJA_LIST.md  README-license.txt  README.md  RELEASE  RELEASE_NOTES.md  advanced_examples.html  appveyor.yml  azure-pipelines.yml  basic_examples.html  codecov.yml  conanfile.py  config_build.html  dev_guide.html  future.html  genindex.html  index.html  new_reduce.cpp  new_reduce_loc.cpp  new_reduce_test.cpp  objects.inv  primer.html  (+5 more)
docs/: CMakeLists.txt  README-RAJA_license.txt  conf.py  index.rst  requirements.txt  style_guide.md
docs/Licenses/: llvm-license.txt  rocprim-license.txt
docs/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/sphinx/: .gitignore  CMakeLists.txt  Makefile  advanced_config.rst  advanced_examples.rst  basic_examples.rst  buildme  code_organization.rst  conf.py  conf.py.in  config_build.rst  config_options.rst  contributing.rst  dev_guide.rst  features.rst  future.rst  getting_started.rst  index.rst  introduction.rst  plugins.rst  primer.rst  raja_license.rst  test_examples.rst  tutorial.rst
examples/: #ls#  4D_tensor_contraction.cpp  CMakeLists.txt  adVectorsT.cxx  addVectors.cpp  addVectors.cxx  addVectors2.cxx  array-reductions.cpp  array-reductions.hpp  array-reductions2.cpp  array-reductions2.hpp  binning.cpp  coloring.cpp  coloring.cxx  coloring2.cxx  cpu-shmem-ltimes.cpp  cuda-dynamic-forall.cpp  cuda-shmem-ltimes.cpp  customIndex.cpp  dynamic-forall.cpp  dynamic_mat_transpose.cpp  ex-batched-matrix-multiply.cpp  ex-layout.cpp  ex-matrix-transpose.cpp  ex-offset.cpp  ex-shared-matrix-transpose.cpp  ex-tiled-matrix-transpose.cpp  ex0-daxpy.cpp  ex1-add-vectors.cpp  ex10-binning.cpp  ex10-jacobi.cpp  ex10-nested-loop-reorder.cpp  ex11-jacobi.cpp  ex11-nested-loop-reorder-advanced.cpp  ex11-red-black-gauss-seidel.cpp  ex12-red-black-gauss-seidel.cpp  ex13-wave-eqn.cpp  ex2-dot-product.cpp  ex3-dot-product.cpp  ex3-indexset-segments.cpp  (+141 more)
examples/TDFD/: Makefile  coeffs12.h  fd.cpp  fd.sh
examples/halo-exchange/: CMakeLists.txt  CopyTransaction.cpp  CopyTransaction.hpp  GraphSchedule.cpp  GraphSchedule.hpp  Item.cpp  Item.hpp  MessageStream.hpp  Point.cpp  Point.hpp  Schedule.cpp  Schedule.hpp  SumTransaction.cpp  SumTransaction.hpp  Transaction.hpp  halo-exchange.cpp  halo-exchange.hpp  lists.cpp  loop.hpp
examples/plugin/: CMakeLists.txt  caliper-plugin.cpp  counter-plugin.cpp  init-plugin.cpp  raja-caliper.cpp  raja-forall-caliper.cpp  raja-launch-caliper.cpp  test-plugin-dynamic.cpp  test-plugin.cpp  timer-plugin.cpp  timer-plugin.hpp
exercises/: CMakeLists.txt  Dockerfile  atomic-histogram.cpp  atomic-histogram_solution.cpp  dot-product.cpp  dot-product_solution.cpp  ex-diff  ex_1_add-vectors.cpp  ex_2_dot-product.cpp  ex_3_indexset-segments.cpp  ex_4_atomic-binning.cpp  ex_5_batched-matrix-multiply.cpp  ex_6_matrix-multiply.cpp  ex_7_tiled-matrix-transpose.cpp  ex_8_matrix-transpose-local-array.cpp  forall-param-reductions_solution.cpp  kernel-matrix-transpose-local-array.cpp  kernel-matrix-transpose-local-array_solution.cpp  kernel-matrix-transpose-tiled.cpp  kernel-matrix-transpose-tiled_solution.cpp  kernel-matrix-transpose.cpp  kernel-matrix-transpose_solution.cpp  kernelintro-execpols.cpp  kernelintro-execpols_solution.cpp  kernelintro-nested-loop-reorder.cpp  kernelintro-nested-loop-reorder_solution.cpp  launch-matrix-transpose-local-array.cpp  launch-matrix-transpose-local-array_solution.cpp  launch-matrix-transpose-tiled.cpp  launch-matrix-transpose-tiled_solution.cpp  launch-matrix-transpose.cpp  launch-matrix-transpose_solution-tiled.cpp  launch-matrix-transpose_solution.cpp  launch-tiled-matrix-transpose_solution.cpp  launchintro-execpols.cpp  launchintro-execpols_solution.cpp  memoryManager.hpp  offset-layout-stencil.cpp  offset-layout-stencil_solution.cpp  permuted-layout-batch-matrix-multiply.cpp  (+25 more)
exercises/fractal_tutorial/: CMakeLists.txt  fractal-CUDA.cpp  fractal-serial.cpp  tutorial-guide.rst
exercises/tutorial_PPoPP19/: ex_3_indexset-segments.cpp  ex_5_batched-matrix-multiply.cpp  ex_6_matrix-multiply.cpp  ex_8_matrix-transpose-local-array.cpp
exercises/tutorial_halfday/: .ex3_colored-indexset_solution.cpp.swp  CMakeLists.txt  ex1_vector-addition.cpp  ex1_vector-addition_solution.cpp  ex2_approx-pi.cpp  ex2_approx-pi_solution.cpp  ex3_colored-indexset.cpp  ex3_colored-indexset_solution.cpp  ex4_atomic-histogram.cpp  ex4_atomic-histogram_solution.cpp  ex5_line-of-sight.cpp  ex5_line-of-sight_solution.cpp  ex6_stencil-offset-layout.cpp  ex6_stencil-offset-layout_solution.cpp  ex7_nested-loop-reorder.cpp  ex7_nested-loop-reorder_solution.cpp  ex7_tiled-matrix-transpose.cpp  ex7_tiled-matrix-transpose_solution.cpp  ex8_matrix-transpose-local-array.cpp  ex8_matrix-transpose-local-array_solution.cpp  ex8_tiled-matrix-transpose.cpp  ex8_tiled-matrix-transpose_solution.cpp  ex9_matrix-transpose-local-array.cpp  ex9_matrix-transpose-local-array_solution.cpp  memoryManager.hpp
reproducers/: CMakeLists.txt
reproducers/clangcuda/: CMakeLists.txt  reproducer-multdef-main.cpp  (+3 more)
src/: #AlignedRangeIndexSetBuilders.cpp#  AlignedRangeIndexSetBuilders.cpp  AlignedRangeIndexSetBuilders.cxx  BoxSegment.cxx  CMakeLists.txt  DepGraphNode.cpp  DepGraphNode.cxx  GPUReducerTally.cpp  IndexSet.cxx  KokkosPluginLoader.cpp  ListSegment.cpp  ListSegment.cxx  LockFreeIndexSetBuilders.cpp  LockFreeIndexSetBuilders.cxx  Logger.cxx  Logging.cxx  MemUtils.cpp  MemUtils.cxx  MemUtils_CPU.cpp  MemUtils_CPU.cxx  MemUtils_CUDA.cpp  MemUtils_CUDA.cxx  MemUtils_HIP.cpp  MemUtils_ROCM.cpp  MemUtils_SYCL.cpp  PluginStrategy.cpp  RangeSegment.cpp  RangeSegment.cxx  RuntimePluginLoader.cpp  SharedMemory.cpp  SymExec.cpp  TensorStats.cpp  ThreadUtils_CPU.cpp  ThreadUtils_CPU.cxx  VectorStats.cpp
test/: CMakeLists.txt  CTestCustom.cmake  compilers.mk
test/reduce/: runme  (+4 more)
(+3777 files in other folders)
